--- a/index.1.html
+++ b/index.1.html
@@ -6,10 +6,13 @@
     <title>JavaScript: Functions</title>
   </head>
   <body>
-    <script src="script7.js"></script>
+    <script src="script8.js"></script>
     <script>
-      ray.speak({ say: "Yahya" });
-      ray.run();
+      ray
+        .speak({ say: "Yahya" })
+        .run()
+        .speak({ say: "run faster" })
+        .run({ speed: "faster" });
     </script>
   </body>
 </html>
